--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/preset-env": "^7.4.5",
 		"babel-loader": "^8.0.6",
+		"babel-plugin-emotion": "^10.0.14",
 		"css-loader": "^3.0.0",
 		"eslint": "^6.0.1",
 		"eslint-config-prettier": "^6.0.0",
